# battery-management-system

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  GitVersion.yml  README.md  gencc.py  package-lock.json  package.json  release.config.cjs
bms/: .clang-tidy  .clangd  .gitignore  .mxproject  .project.bak  CMakeLists.txt  Makefile  STM32G474XX_FLASH.ld  bms.ioc  launch.json  p_CMakeLists.txt
bms/App/: CMakeLists.txt  cmake.sh
bms/App/Charge/: balancing.h  pq.h
bms/App/Core/: bms_driver.c  bms_driver.h  bms_fault.c  commands.c  commands.h  config.h  kalman.c
bms/App/Inc/: bms_driver.h  bms_fault.h  commands.h  config.h  current.h  kalman.h  pec_table.h  register.h  temperature.h  vcu.h  voltage.h
bms/App/Src/: bms_driver.c  bms_fault.c  commands.c  current.c  pec_table.c  temperature.c  vcu.c  voltage.c
bms/App/algorithms/: CMakeLists.txt
bms/App/algorithms/cb/: CMakeLists.txt  cb.c  cb.h  csort.c  csort.h  queue.c  queue.h
bms/App/algorithms/parse/: CMakeLists.txt
bms/App/algorithms/pec/: CMakeLists.txt  pec.c  pec.h
bms/App/algorithms/soc/: CMakeLists.txt
bms/App/algorithms/thermal/: CMakeLists.txt  gen_table.py  table.txt  thermistor.c  thermistor.h  thermistor_lut.h
bms/App/api/: CMakeLists.txt
bms/App/api/charger/: CMakeLists.txt  charger.c  charger.h  supervisor.c  supervisor.h
bms/App/api/eeprom/: CMakeLists.txt  eeprom.c  eeprom.h
bms/App/api/imd/: CMakeLists.txt  imd.c  imd.h
bms/App/api/interface/: CMakeLists.txt  bms_can.c  bms_can.h  bms_can_protocol.h  interface.c  interface.h
bms/App/api/interface/emulator/: CMakeLists.txt  emulator.c  emulator.h
bms/App/api/isolation/: CMakeLists.txt  isolation.c  isolation.h
bms/App/api/precharge/: CMakeLists.txt  precharge.c  precharge.h
bms/App/api/segment/: segment.c  segment.h
bms/App/core/: CMakeLists.txt
bms/App/core/adc/: adc.c  adc.h
bms/App/core/can/: can.c  can.h
bms/App/core/fdcan/: fdcan.c  fdcan.h  fdcantemp.h
bms/App/core/include/: bms_driver.h  bms_enums.h  bms_types.h  can_gui_handler.h  can_handler.h  can_types.h  can_utils.h  command_list.h  comms.h  enums.h  pec.h  registers.h
bms/App/core/source/: bms_driver.c  can_gui_handler.c  can_handler.c  can_utils.c  comms.c
bms/App/core/spi/: CMakeLists.txt  spi.c  spi.h  stm32g4xx_hal_spi.h
bms/App/drivers/inc/: adbms.h  bms_driver.h  cdatatypes.h
bms/App/drivers/src/: adbms.c  bms_driver.c
bms/App/lib/: CMakeLists.txt
bms/App/lib/adbms/inc/: bms_comms.h  bms_enums.h  bms_types.h  config.h  data.h  parse.h
bms/App/lib/adbms/src/: bms_comms.c  config.c  data.c  parse.c
bms/App/lib/amc/: CMakeLists.txt
bms/App/lib/amc/inc/: amc_drivers.h
bms/App/lib/amc/src/: amc_drivers.c
bms/App/lib/api/: CMakeLists.txt
bms/App/lib/api/include/: api.h  bms_enums.h  bms_types.h  command_list.h  comms.h  config.h  data.h  data_read_handlers.h  parse.h
bms/App/lib/api/source/: api.c  comms.c  data.c  data_read_handlers.c  parse.c
bms/App/lib/cab/: CMakeLists.txt
bms/App/lib/cab/inc/: cab_drivers.h  cab_types.h
bms/App/lib/cab/src/: cab_drivers.c
bms/App/lib/elcon/: CMakeLists.txt
bms/App/lib/elcon/inc/: elcon_comms.h  elcon_drivers.h  elcon_types.h
bms/App/lib/elcon/src/: elcon_comms.c  elcon_types.c
bms/App/lib/gui/: CMakeLists.txt
bms/App/lib/gui/inc/: gui_data_handler.h  gui_drivers.h  gui_types.h
bms/App/lib/gui/src/: gui_comms.c  gui_data_handler.c  gui_drivers.c  gui_types.c
bms/App/lib/imd/: CMakeLists.txt
bms/App/lib/imd/inc/: imd_comms.h  imd_drivers.h  imd_types.h
bms/App/lib/imd/src/: imd_drivers.c
bms/App/lib/iso/: CMakeLists.txt
bms/App/lib/iso/inc/: iso_parse.h  iso_types.h
bms/App/lib/iso/src/: iso_parse.c  iso_types.c
bms/App/lib/program/: CMakeLists.txt  bms.c  bms.h  charging.c  charging.h
bms/App/math/: CMakeLists.txt
bms/App/math/cb/: CMakeLists.txt  cb.c  cb.h
bms/App/math/ema/: CMakeLists.txt  ema.c  ema.h
bms/App/math/soc/: coulomb.h  coulomn.c  soc_curve.h
bms/App/math/thermal/: gen_table.py  thermistor.c
bms/App/program/: CMakeLists.txt  bms.c  bms.h  bms_can_handler.c  state.c
bms/App/services/: CMakeLists.txt  state.c
bms/App/services/daemons/: CMakeLists.txt  diagd.c  diagd.h
bms/App/services/program/: CMakeLists.txt  bms.c  bms.h  state.c  state.h  supervisor.c  supervisor.h
bms/App/services/threads/: CMakeLists.txt  can2_job.c  can_job.c  can_job.h  gui_can_job.c  safety_monitor.c  safety_monitor.h
bms/App/services/threads/precharge/: precharge.c  precharge.h
bms/App/services/threads/safety/: safety_monitor.c  safety_monitor.h
bms/App/services/threads/tcan/: can2_job.c  can2_job.h
bms/App/services/threads/vcan/: gui_can_job.c
bms/CM4/: .cproject.bak  .project.bak  bms_CM4 Debug.launch
bms/CM4/Debug/: bms_CM4.elf  bms_CM4.list  bms_CM4.map  makefile
bms/CM4/Debug/Src/: subdir.mk
bms/CM4/Debug/Startup/: subdir.mk
bms/CM7/: .cproject.bak  .project.bak  STM32H755ZITX_FLASH.ld  STM32H755ZITX_RAM.ld
bms/Common/Inc/: uart_print.h
bms/Common/Src/: uart_print.c
bms/Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  version.h
bms/Core/Src/: adc.c  app_freertos.c  crc.c  fdcan.c  gpio.c  i2c.c  main.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  system_stm32g4xx.c  tim.c  usart.c
bms/Drivers/CMSIS/Device/ST/STM32G4xx/Include/: stm32g4xx.h
bms/Drivers/STM32G4xx_HAL_Driver/Src/: stm32g4xx_hal_tim.c
bms/DumbExample/: CMakeLists.txt
bms/Middlewares/: CMakeLists.txt
bms/Tests/: .clangd  CMakeLists.txt
bms/Tests/CellBalancing/: CMakeLists.txt  TestCellBalancing.c
bms/Tests/Data/: CMakeLists.txt  TestData.c
bms/Tests/DumbExample/: CMakeLists.txt  TestDumbExample.c
bms/Tests/FFF/: fff.h
bms/Tests/GUI_Testing/: testing.txt
bms/Tests/Thermistor/: CMakeLists.txt  TestThermistor.c
bms/cmake/: gcc-arm-none-eabi.cmake
bms/cmake/stm32cubemx/: CMakeLists.txt
can_gui_demo/: .mxproject  CMakeLists.txt
can_gui_test/: CMakeLists.txt
docs/: README.md  adc.md  ekf.md  rtos.md  soc.md  voltage.md
scripts/: ci-local.sh  (+3 more)
(+31 files in other folders)
